--- a/module1/module1.html
+++ b/module1/module1.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div ng-controller="module1Ctrl">
+This is the template module1.html, and this is my message:
+<p>{{message}}</p>
+</div>
 
-</body>
-</html>
+<link rel="stylesheet" type="text/css" href="module1.css"/>
