--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <script src="app-controllers.js"></script>
   <script src="app-services.js"></script>
   <script src="app-filters.js"></script>
+  <script src="module1/module1.js"></script>
+  <script src="module1/module1-controllers.js"></script>
+  <script src="module1/module1-directives.js"></script>
+  <script src="module1/module1-filters.js"></script>
+  <script src="module1/module1-services.js"></script>
   <link rel="stylesheet" type="text/css" href="common/bower_components/bootstrap/dist/css/bootstrap.css"/>
   <link rel="stylesheet" type="text/css" href="common/bower_components/ng-table/ng-table.css"/>
   <link rel="stylesheet" type="text/css" href="app.css"/>
